--- a/keytool/config.json
+++ b/keytool/config.json
@@ -2,7 +2,8 @@
   "name": "Keytool",
   "slug": "keytool",
   "version": "1.2.0",
-  "arch": ["amd64", "armv7", "arm64"],
+  "description": "Workaround for Unifi to initiate keystore",
+  "arch": ["amd64", "armv7", "aarch64"],
   "startup": "application",
   "host_network": false,
   "host_volumes": ["/ssl:/ssl:ro"],
@@ -16,6 +17,5 @@
     "keystore_password": "str",
     "key_alias": "str",
     "keystore_file": "str"
-  },
-  "webui": "index.html"
+  }
 }
