--- a/keytool/Dockerfile
+++ b/keytool/Dockerfile
@@ -1,5 +1,7 @@
-FROM ghcr.io/home-assistant/amd64-base:latest
-RUN mkdir -p /ssl
+ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:latest
+FROM ${BUILD_FROM}
+
 COPY run.sh /run.sh
-RUN chmod +x /run.sh
-CMD ["/run.sh"]
+RUN chmod a+x /run.sh
+
+CMD [ "/init" ]
