--- a/keytool/config.json
+++ b/keytool/config.json
@@ -1,12 +1,12 @@
 {
-  "version": "1.0.1007",
+  "version": "1.0.1008",
   "slug": "keytool",
   "name": "Keytool",
   "description": "Generate PKCS12 keystore for Unifi from HA SSL",
   "arch": ["amd64"],
   "startup": "once",
   "boot": "auto",
-  "init": false,
+  "init": false, "hassio_role": "manager",
   "map": ["ssl:ro", "share:rw"],
   "schema": {
     "password": "str"
