--- a/keytool/Dockerfile
+++ b/keytool/Dockerfile
@@ -1,7 +1,9 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
+RUN apk add --no-cache openssl
+
 COPY run.sh /
 RUN chmod +x /run.sh
 
-CMD ["/run.sh"]
+ENTRYPOINT ["/run.sh"]
