Switch to alpine base with init false + run.sh ENTRYPOINT, no s6 v1.0.1

--- a/keytool/Dockerfile
+++ b/keytool/Dockerfile
@@ -1,8 +1,11 @@
-ARG BUILD_FROM
-FROM $BUILD_FROM
+FROM alpine:latest
 
-# Install openssl for pkcs12 export
-RUN apk add --no-cache openssl
+# Install bash and openssl
+RUN apk add --no-cache bash openssl
 
-# Copy cont-init script
-COPY rootfs/ /
+# Copy run.sh
+COPY run.sh /run.sh
+RUN chmod +x /run.sh
+
+# Set ENTRYPOINT to run.sh (bypasses s6)
+ENTRYPOINT ["/run.sh"]
