Switch to build_from for local image build, fix 404 pull v1.0.4

--- a/keytool/config.json
+++ b/keytool/config.json
@@ -7,6 +7,7 @@
   "startup": "application",
   "boot": "auto",
   "map": ["ssl:rw", "share:rw", "config:rw"],
+  "build_from": "alpine:latest",
   "options": {
     "password": "Password@2025"
   },
@@ -14,7 +15,7 @@
     "password": "str"
   },
   "ports": {},
-  "image": "baghamut/hassio-addon-keytool",
+  "image": "keytool",
   "environment": {},
   "backup_exclude": ["share/unifi.p12"]
 }
