--- a/keytool/config.json
+++ b/keytool/config.json
@@ -7,7 +7,7 @@
   "startup": "application",
   "boot": "auto",
   "map": ["ssl:rw", "share:rw", "config:rw"],
-  "build_from": "alpine:latest",
+  "build_from": "ghcr.io/home-assistant/amd64-base:latest",
   "options": {
     "password": "Password@2025"
   },
@@ -15,7 +15,6 @@
     "password": "str"
   },
   "ports": {},
-  "image": "keytool",
   "environment": {},
   "backup_exclude": ["share/unifi.p12"]
 }
